--- a/document_final.tex
+++ b/document_final.tex
@@ -51,7 +51,7 @@ Nous allons travailler ici sur l'article \cite{ref2} d'A. Gaudillière et A. Asse
 \section{Historique}
 Le modèle qui nous intéresse est un exemple de modèle de croissance aléatoire couramment nommé IDLA (Internal Diffusion Limited Aggregation). Il a été introduit en 1986 par P. Meakin et J.M. Deutch \cite{chimie} dans le cadre de la chimie théorique pour décrire des processus comme l'électro-polissage. Dès l'introduction du modèle, il a semblé important de connaître la forme asymptotique du cluster obtenu, mais aussi l'ordre des variation par rapport à cette forme limite puisqu'il s'agissait de polir des matériaux.
 
-P. Diaconis et W. Fulton ont formalisé mathématiquement le processus en 1991 \cite{ref4} et démontré certaines de ces propriétés, en particulier une propriété très utile de commutativité présentée ici partie \ref{abel}. Le modèle de croissance qu'ils proposent est alors original car il s'agit du premier modèle qui semble donner des clusters de forme sphérique.
+P. Diaconis et W. Fulton ont formalisé mathématiquement le processus en 1991 \cite{ref4} et démontré certaines de ces propriétés, en particulier une propriété très utile de commutativité dont on fait usage dans la partie \ref{abel}. Le modèle de croissance qu'ils proposent est alors original car il s'agit du premier modèle qui semble donner des clusters de forme sphérique.
 
 G. Lawler, M. Bramson, M. et D. Griffeath ont pour la première fois montré en 1992 dans \cite{ref5} que la forme asymptotique de la région explorée était une boule, dans le sens suivant :
 on appelle $\mathbb{B}(y,R)=\{x \in \mathbb{Z}^d, \|x-y\| <R\}$ la boule dans $\mathbb{Z}^d$ de centre $y$ et de rayon $R$, et $b(n)=\mathrm{Card}(\mathbb{B}(0,n))$. On note $A(k)$ la région explorée après avoir lancé $k$ explorateurs. Alors :
